framec/tests/snapshots/dart_snapshots__selfcall.snap
---
source: framec/tests/dart_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"dart\")"
---
class SelfCallFrameEvent {
    late String _message;
    late List<dynamic> _parameters;

    SelfCallFrameEvent(String message, List<dynamic> parameters) {
        this._message = message;
        this._parameters = parameters;
    }
}


class SelfCallFrameContext {
    late SelfCallFrameEvent event;
    dynamic _return;
    late Map<String, dynamic> _data;
    late bool _transitioned;

    SelfCallFrameContext(SelfCallFrameEvent event, dynamic default_return) {
        this.event = event;
        this._return = default_return;
        this._data = <String, dynamic>{};
        this._transitioned = false;
    }
}


class SelfCallCompartment {
    late String state;
    late List<dynamic> state_args;
    late Map<String, dynamic> state_vars;
    late List<dynamic> enter_args;
    late List<dynamic> exit_args;
    dynamic forward_event;
    SelfCallCompartment? parent_compartment;

    SelfCallCompartment(String state, [SelfCallCompartment? parent_compartment = null]) {
        this.state = state;
        this.state_args = [];
        this.state_vars = <String, dynamic>{};
        this.enter_args = [];
        this.exit_args = [];
        this.forward_event = null;
        this.parent_compartment = parent_compartment;
    }

    SelfCallCompartment copy() {
        final c = SelfCallCompartment(this.state, this.parent_compartment);
        c.state_args = List<dynamic>.from(this.state_args);
        c.state_vars = Map<String, dynamic>.from(this.state_vars);
        c.enter_args = List<dynamic>.from(this.enter_args);
        c.exit_args = List<dynamic>.from(this.exit_args);
        c.forward_event = this.forward_event;
        return c;
    }
}


class SelfCall {
    late List<SelfCallCompartment> _state_stack;
    late SelfCallCompartment __compartment;
    SelfCallCompartment? __next_compartment;
    late List<SelfCallFrameContext> _context_stack;
    int count = 0;

    SelfCall() {
        this._state_stack = [];
        this._context_stack = [];
        this.__compartment = this.__prepareEnter("Active", [], []);
        this.__next_compartment = null;
    }

    void _frame_init() {
        final __e = SelfCallFrameEvent("\$>", __compartment.enter_args);
        final __ctx = SelfCallFrameContext(__e, null);
        _context_stack.add(__ctx);
        __kernel(__e);
        _context_stack.removeLast();
    }

    factory SelfCall.create() {
        final c = SelfCall();
        c._frame_init();
        return c;
    }

    Map<String, List<String>> hsm_chain() {
        return {
            "Active": ["Active"],
        };
    }
    SelfCallCompartment __prepareEnter(String leaf, List<dynamic> state_args, List<dynamic> enter_args) {
        SelfCallCompartment? comp = null;
        for (final name in hsm_chain()[leaf]!) {
            final new_comp = SelfCallCompartment(name);
            new_comp.state_args = List<dynamic>.from(state_args);
            new_comp.enter_args = List<dynamic>.from(enter_args);
            new_comp.parent_compartment = comp;
            comp = new_comp;
        }
        return comp!;
    }

    void __prepareExit(List<dynamic> exit_args) {
        SelfCallCompartment? comp = __compartment;
        while (comp != null) {
            comp.exit_args = List<dynamic>.from(exit_args);
            comp = comp.parent_compartment;
        }
    }

    void __kernel(SelfCallFrameEvent __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            final next_compartment = __next_compartment!;
            __next_compartment = null;
            // Exit the current (leaf) state.
            final exit_event = SelfCallFrameEvent("<\$", __compartment.exit_args);
            __router(exit_event);
            // Switch to the new compartment.
            __compartment = next_compartment;
            // Three-branch forward-event handling.
            final forward_event = next_compartment.forward_event;
            next_compartment.forward_event = null;
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                final enter_event = SelfCallFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
            } else if (forward_event._message == "\$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                final enter_event = SelfCallFrameEvent("\$>", __compartment.enter_args);
                __router(enter_event);
                __router(forward_event);
            }
            for (final ctx in _context_stack) {
                ctx._transitioned = true;
            }
        }
    }

    void __router(SelfCallFrameEvent __e) {
        switch (__compartment.state) {
            case "Active":
                _state_Active(__e, __compartment);
                break;
        }
    }

    void __transition(SelfCallCompartment next_compartment) {
        __next_compartment = next_compartment;
    }

    void kick() {
        final __e = SelfCallFrameEvent("kick", []);
        final __ctx = SelfCallFrameContext(__e, null);
        _context_stack.add(__ctx);
        try {
            __kernel(__e);
        } finally {
            _context_stack.removeLast();
        }
    }

    int report() {
        final __e = SelfCallFrameEvent("report", []);
        final __ctx = SelfCallFrameContext(__e, 0);
        _context_stack.add(__ctx);
        try {
            __kernel(__e);
            return _context_stack.removeLast()._return;
        } catch (__frame_err) {
            _context_stack.removeLast();
            rethrow;
        }
    }

    void _state_Active(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        if (__e._message == "kick") {
            this._s_Active_hdl_user_kick(__e, compartment);
            return;
        }
        if (__e._message == "report") {
            this._s_Active_hdl_user_report(__e, compartment);
            return;
        }
    }

    void _s_Active_hdl_user_kick(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        this.count = this.count + 1;
        this.report();
        if (this._context_stack.isNotEmpty && this._context_stack[this._context_stack.length - 1]._transitioned) return;
    }

    void _s_Active_hdl_user_report(SelfCallFrameEvent __e, SelfCallCompartment compartment) {
        this._context_stack[this._context_stack.length - 1]._return = this.count;
    }
}
